full draft rewrite w02

--- a/02-GIScience.qmd
+++ b/02-GIScience.qmd
@@ -255,13 +255,13 @@ Now the 2011 data is prepared, we can move to the 2021 data:
 4. Save the file as `csv` into your `data` folder as `LSOA2021_population.csv` with the following column names: `lsoa21_code`, `lsoa21_name`, and `pop2021`. 
 
 ::: { .callout-warning}
-Again make sure you did not miss any LSOAs. Once you are done cutting and pasting, you should have **4,995** rows of data in your second spreadsheet.
+Again make sure you did not miss any LSOAs. You should end up with **4,995** rows of data in your second spreadsheet.
 :::
 
 ### Mapping population data
 
 #### Setting up a project
-We will now use QGIS to create population maps for the LSOAs in London for both years. To achieve this, we need to **join our table data to our spatial datasets** and then map our populations for our visual analysis. Because, as we have seen above, we have issues with the number of LSOAs and changes in boundaries between the two Censuses, we will not (for now) complete any quantitative analysis of these population changes - this would require significant additional processing that we do not have time for today. 
+We will now use QGIS to create population maps for the LSOAs in London for both years. To achieve this, we need to **join our table data to our spatial datasets** and then map our populations for our visual analysis. Because, as we have seen above, we have issues with a different number of LSOAs for each of the Censuses.
 
 ::: { .callout-note}
 Data interoperability is a key issue that you will face in spatial analysis, particularly when it comes to Administrative Geographies. 
@@ -358,5 +358,54 @@ knitr::include_graphics('images/w02/all-lsoa-london.png')
 ```
 
 ::: { .callout-note}
-The main strength of a GUI GIS system is that is really helps us understand how we can visualise spatial data. Even with just one two spatial layers loaded, we can understand two key concepts of using spatial data within GIS. The first, and this is only really relevant to GUI GIS systems, is that each layer can either be turned on or off, to make it visible or not. The second concept is the order in which your layers are drawn – and this is relevant for both GUI GIS and when using plotting libraries such as `ggplot2` or `tmap` in RStudio. Your layers will be drawn depending on the order in which your layers are either tabled (as in a GUI GIS) or 'called' in your function in code. Being aware of this need for 'order' is important when we shift to using RStudio and `tmap` to plot our maps, as if you do not layer your data correctly in your code, your map will end up not looking as you hoped. For us using QGIS right now, the layers will be drawn from bottom to top.
+The main strength of a GUI GIS system is that is really helps us understand how we can visualise spatial data. Even with just two spatial layers loaded, we can understand two key concepts of using spatial data within GIS. The first, and this is only really relevant to GUI GIS systems, is that each layer can either be turned on or off, to make it visible or not. The second concept is the order in which your layers are drawn – and this is relevant for both GUI GIS and when using plotting libraries such as `ggplot2` or `tmap` in RStudio. Your layers will be drawn depending on the order in which your layers are either tabled (as in a GUI GIS) or 'called' in your function in code. Being aware of this need for 'order' is important when we shift to using RStudio and `tmap` to plot our maps, as if you do not layer your data correctly in your code, your map will end up not looking as you hoped. For us using QGIS right now, the layers will be drawn from bottom to top.
 :::
+
+We can now finally map the population distribution of London in 2011. 
+
+9. Right-click on the `LSOA2011_London` layer and click on **Properties** -> **Symbology**.
+- In the dropdown menu at the top of the window, select **Graduated** as symbology.
+- Under value choose `pop2011` as your column. 
+- We can then change the color ramp to suit our aesthetic preferences. In the **Colour ramp** dropdown menu select *Magma*. 
+- The final thing we need to do is **classify** our data - what this simply means is to decide how to group the values in our dataset together to create the graduated representation. 
+- We will be looking at this in later weeks, but for now, we will use the **Natural Breaks** option. 
+- Click on the drop-down next to **Mode**, select **Natural Breaks**, change it to **7** classes and then click **Classify**.
+- Finally click **Apply** to style your dataset.
+
+::: { .callout-tip}
+Understanding what classification is appropriate to visualise your data is an important step within spatial analysis and visualisation, and something you will learn more about in the following weeks. Overall, they should be determined by understanding your data's distribution and match your visualisation accordingly.
+:::
+
+You should now be looking at something like this:
+
+```{r} 
+#| label: fig-lsoa-pop-2011
+#| echo: False
+#| cache: True
+#| fig-cap: "The population distribution of London in 2011. [[Enlarge image]](https://jtvandijk.github.io/GEOG0030/images/w02/lsoa-population-2011.png){target='_blank'}"
+knitr::include_graphics('images/w02/lsoa-population-2011.png')
+```
+
+### Exporting map for visual analysis
+To export your map select only the map layers you want to export and then opt for **Project** -> **Import/Export** -> **Export to Image** and save your final map in your `output` folder. Next week, we will look at how to style our maps using the main map conventions (adding North Arrows, Scale Bars and Legends) but for now a simple picture will do. 
+
+## Assignment {#assignment-w02}
+You now need to **repeat the entire process** to also create a map for the 2021 Census data. Remember, you need to:
+
+- Load the respective spatial layer.
+- Load the respective population dataset.
+- Join the two datasets together using an **Attribute Join**.
+- Export your joined dataset (London only) as a `geopackage`.
+- Style your data appropriately.
+- Export your maps as an image to your `output` folder.
+
+::: { .callout-note}
+To make visual comparisons against our two datasets, theoretically we would need to standardise the breaks at which our classification schemes are set at. To set all two datasets to the same breaks, you can do the following:
+
+- Right-click again on the `LSOA2011_London` dataset and, click on **Styles** -> **Copy Styles** -> **Symbology**.
+- Now right-click on the `LSOA2021_London` file, and click on **Styles** -> **Paste Style** -> **Symbology**. You should now see the classification breaks in the 2021 dataset change to match those in the 2011 data.
+- The final thing you need to do is to change the classification column in the `Symbology` tab for the 2021 dataset to reflect `pop2021`.
+:::
+
+## Before you leave {#byl-w02}
+Save your project so you can go back to it if you need to, other than that [that is it for this week](https://www.youtube.com/watch?v=Wmc8bQoL-J0)!
